<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context=".MainActivity">


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/e_cmapp_logo" />

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_message"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="15sp"
            android:layout_marginBottom="12dp"
            android:textStyle="italic"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#DA000000"
            android:text="@string/user_singin"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtusuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#818181"
            android:hint="@string/edtuser_singin"
            android:textColorHint="@color/white_transparent"
            android:textColor="@color/white_transparent"
            android:minHeight="48dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_singin"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtclave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edtpassword_singin"
            android:textColorHint="@color/white_transparent"
            android:textColor="@color/white_transparent"
            android:minHeight="48dp"
            android:backgroundTint="#818181"
            android:inputType="textPassword"

            />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="50dp"
            android:text="@string/login_btn" />

        <Button
            android:id="@+id/signin_btn"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="50dp"
            android:text="@string/signin_btn"
            android:onClick="signin2" />


    </LinearLayout>


</LinearLayout>