<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Account2Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="110dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ecmapplong" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:text="@string/txtv_account"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="25dp"
                        android:layout_weight="1"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="fill_vertical"
                            android:minHeight="40dp"
                            android:text="@string/txtv_firstname"
                            android:textColor="@color/white"
                            android:textSize="20dp" />

                        <EditText
                            android:id="@+id/edtFirstNameAccount"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:background= "@color/black"
                            android:enabled="false"
                            android:gravity="fill_vertical"
                            android:hint=""
                            android:textColor="@color/white_transparent"
                            android:textColorHint="@color/white_transparent"
                            android:textSize="20dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="fill_vertical"
                            android:minHeight="40dp"
                            android:text="@string/txtv_lastname"
                            android:textColor="@color/white"
                            android:textSize="20dp" />

                        <EditText
                            android:id="@+id/edtLastNameAccount"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:background= "@color/black"
                            android:gravity="fill_vertical"
                            android:hint=""
                            android:textColor="@color/white_transparent"
                            android:textColorHint="@color/white_transparent"
                            android:textSize="20dp"
                            android:enabled="false"/>


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="fill_vertical"
                            android:minHeight="40dp"
                            android:text="@string/txtv_username"
                            android:textColor="@color/white"
                            android:textSize="20dp" />

                        <EditText
                            android:id="@+id/edtUserNameAccount"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:background= "@color/black"
                            android:gravity="fill_vertical"
                            android:hint=""
                            android:textColor="@color/white_transparent"
                            android:textColorHint="@color/white_transparent"
                            android:textSize="20dp"
                            android:enabled="false"/>

                        <EditText
                            android:id="@+id/edtLastUserNameAccount"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:background= "@color/black"
                            android:gravity="fill_vertical"
                            android:hint=""
                            android:textColor="@color/white_transparent"
                            android:textColorHint="@color/white_transparent"
                            android:textSize="20dp"
                            android:enabled="false"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="fill_vertical"
                            android:minHeight="40dp"
                            android:text="@string/txtv_email"
                            android:textColor="@color/white"
                            android:textSize="20dp" />

                        <EditText
                            android:id="@+id/edtEmailAccount"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:background= "@color/black"
                            android:gravity="fill_vertical"
                            android:hint=""
                            android:textColor="@color/white_transparent"
                            android:textColorHint="@color/white_transparent"
                            android:textSize="20dp"
                            android:enabled="false"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:gravity="fill_vertical"
                            android:minHeight="40dp"
                            android:text="@string/password_singin"
                            android:textColor="@color/white"
                            android:textSize="20dp" />

                        <EditText
                            android:id="@+id/edtPasswordAccount"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:background= "@color/black"
                            android:gravity="fill_vertical"
                            android:hint="***********"
                            android:textColor="@color/white_transparent"
                            android:textColorHint="@color/white_transparent"
                            android:textSize="20dp"
                            android:enabled="false"
                            android:inputType="textPassword"/>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="20dp"
                        android:layout_weight="3"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/btnToEdtFirstname"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@drawable/borderdesing"
                            android:src="@drawable/ic_baseline_mode_edit_24" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="45dp" />

                        <ImageButton
                            android:id="@+id/btnToEdtLastname"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@drawable/borderdesing"
                            android:src="@drawable/ic_baseline_mode_edit_24" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="45dp" />

                        <ImageButton
                            android:id="@+id/btnToEdtUsername"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@drawable/borderdesing"
                            android:src="@drawable/ic_baseline_mode_edit_24" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="45dp" />

                        <ImageButton
                            android:id="@+id/btnToEdtEmail"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@drawable/borderdesing"
                            android:src="@drawable/ic_baseline_mode_edit_24" />


                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginRight="25dp"
                    android:layout_marginLeft="25dp">

                    <Button
                        android:id="@+id/btnSaveChanges"
                        android:layout_width="match_parent"
                        android:layout_gravity="center"
                        android:layout_height="50dp"
                        android:text="@string/SaveChanges_btn"
                        android:onClick="signin"/>


                    <Button
                        android:id="@+id/btnModifyPassword"
                        android:layout_width="match_parent"
                        android:layout_gravity="center"
                        android:layout_height="50dp"
                        android:text="@string/changePassword_btn"
                        android:onClick="signin"/>

                    <Button
                        android:id="@+id/btnDeleteAccount"
                        android:layout_width="match_parent"
                        android:layout_gravity="center"
                        android:layout_height="50dp"
                        android:text="@string/deleteAccount_btn"
                        android:onClick="Buscar"/>


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"/>

                </LinearLayout>

            </LinearLayout>


        </ScrollView>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>